--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
+
 {
   "name": "react-native-user-inactivity",
   "version": "1.2.0",
   "description": "React Native component that notifies if the user is active or not",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "src/index.tsx",
+  "typings": "src/index.tsx",
   "scripts": {
     "clean": "rimraf ./lib",
     "prebuild": "npm run clean && npm run lint",
